# pycon-gpu-ci-example

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: containers.yaml  main.yaml
ci/: Dockerfile.cuda_build  Dockerfile.cuda_test
example/: CMakeLists.txt  extension.cpp
example/extension/: CMakeLists.txt
example/extension/include/example/: square.hpp
example/extension/src/: square.cu
tests/: test_square.py
